Fix price on narrow screens

--- a/static/css/classes.css
+++ b/static/css/classes.css
@@ -90,6 +90,7 @@
   font-weight:bold;
   margin:15px 0 0 0;
   line-height: 1em;
+  max-width: 25%;
 }
 
 .class-display-price:before {
